First pass complete

--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,15 +1,24 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #c5c8c6;
-@light-gray: #969896;
-@gray: #373b41;
-@dark-gray: #282a2e;
-@very-dark-gray: #1d1f21;
+// Primary artifacts
+@foreground-gray:  #D3D0C8;
+@cursor-gray:      #A09F93;
+@selection-gray:   #515151;
+@background-gray:  #2D2D2D;
+@invisibles-gray:  #747369;
 
-@cyan: #8abeb7;
-@blue: #81a2be;
-@purple: #b294bb;
-@green: #b5bd68;
-@red: #cc6666;
-@orange: #de935f;
-@light-orange: #f0c674;
+// Basic colors
+@purple:      #CC99CC;
+@red:         #F2777A;
+@blue:        #6699CC;
+@yellow:      #FFCC66;
+@white:       #F2F0EC;
+@cyan:        #66CCCC;
+@green:       #99CC99;
+@orange:      #F99157;
+
+// Gutter colors
+@hot-pink:            #F92672;
+@snot-green:          #A6E22E;
+@bright-purple:       #967EFB;
+@line-highlight-gray: #393939;
