--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -40,7 +40,7 @@
   .gutter .line-number.folded,
   .gutter .line-number:after,
   .fold-marker:after {
-    color: @light-gray;
+    color: @foreground-gray;
   }
 
   .invisible {
@@ -66,17 +66,17 @@
 }
 
 .comment {
-  color: @light-gray;
+  color: @invisibles-gray;
 }
 
 .entity {
   &.name.type {
-    color: @light-orange;
+    color: @yellow;
     text-decoration: underline;
   }
 
   &.other.inherited-class {
-    color: @green;
+    color: @yellow;
   }
 }
 
@@ -161,7 +161,7 @@
 .punctuation {
   &.definition {
     &.comment {
-      color: @light-gray;
+      color: @invisibles-gray;
     }
 
     &.string,
@@ -177,7 +177,7 @@
     }
 
     &.bold {
-      color: @light-orange;
+      color: @yellow;
       font-style: bold;
     }
 
@@ -195,7 +195,7 @@
 
 .support {
   &.class {
-    color: @light-orange;
+    color: @yellow;
   }
 
   &.function  {
@@ -213,7 +213,7 @@
   }
 
   &.name.class, &.name.type.class {
-    color: @light-orange;
+    color: @yellow;
   }
 
   &.name.section {
@@ -236,7 +236,7 @@
 
 .meta {
   &.class {
-    color: @light-orange;
+    color: @yellow;
   }
 
   &.link {
@@ -252,7 +252,7 @@
   }
 
   &.separator {
-    background-color: @gray;
+    background-color: @selection-gray;
     color: @syntax-text-color;
   }
 }
